[project]
name = "django-slack-tools"
version = "0.5.0"
description = "Little helpers for working with Slack bots 🤖 in Django."
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10, <4.0"
dependencies = [
  "django>=5,<7",
  "slack-bolt>=1,<2",
  "xmltodict>=1.0.4,<2",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
celery = ["celery>=5,<6"]

[dependency-groups]
dev = [
  "django-debug-toolbar==6.3.0",
  "django-extensions==4.1",
  "django-stubs[compatible-mypy]==6.0.6",
  "ipykernel==7.3.0",
  "mkdocs-material==9.7.6",
  "mkdocs==1.6.1",
  "mkdocstrings[python]==1.0.4",
  "mypy==2.1.0",
  "ruff==0.15.20",
  "mike==2.2.0",
  "coverage==7.15.0",
  "django-coverage-plugin==3.2.2",
  "factory-boy==3.3.3",
  "faker==40.28.1",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-sugar==1.1.1",
  "pytest-xdist==3.8.0",
  "pytest==9.1.1",
  "nox==2026.4.10",
]

[project.urls]
Homepage = "https://github.com/lasuillard-s/django-slack-tools"
Repository = "https://github.com/lasuillard-s/django-slack-tools.git"
Issues = "https://github.com/lasuillard-s/django-slack-tools/issues"
Documentation = "https://lasuillard-s.github.io/django-slack-tools/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_slack_tools"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401", # Don't be too strict
  "COM812", # Formatting conflict
  "D105",
  "FIX002",
  "TD003",
  "UP045",  # Pydantic may not well work with this
]

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["D104"]
"**/migrations/*" = ["RUF012", "D"]
"examples/*" = ["D100", "D101"]
"testproj/*" = ["D100"]
"tests/*" = ["D", "S101", "PLR2004", "SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ['^\.venv/*']
plugins = ["mypy_django_plugin.main"]
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = true
explicit_package_bases = true

[tool.django-stubs]
django_settings_module = "testproj.config.settings"

[tool.pytest.ini_options]
addopts = [
  "--numprocesses=auto",
  "--strict-markers",
  "--doctest-modules",
  "--ds=testproj.config.settings",
  "--reuse-db",
  "--cov",
  "--cov-report=term",
  "--cov-report=xml",
  "--show-capture=no",
  "--junitxml=junit.xml",
  "-rs",
]
testpaths = ["tests"]
markers = ["slack: Tests working with Slack."]

[tool.coverage.run]
include = ["django_slack_tools/*"]
omit = ["*/migrations/*", "*tests*"]
branch = true
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
